--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,6 +5,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0px 200px;
 }
 .nav-title {
     color: var(--Dark-01, #181818);
@@ -21,10 +22,6 @@ nav {
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
-    border: 0;
-    width: 150px;
-    height: 64px;
-    flex-shrink: 0;
     padding: 15px 35px;
 }
 nav > ul {
@@ -39,5 +36,17 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+
+}
+.header {
+    background-color: #FFF8F3;
+}
+.banner {
+    padding: 30px 30px 30px 150px;
+    display: flex; 
+    align-items: center;  
+}
+.banner .profile-pic {
+    width: 500px;
 
 }
