--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,20 +1,37 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
 nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0px 200px;
 }
+
 .nav-title {
     color: var(--Dark-01, #181818);
     font-size: 45px;
     font-weight: 800;
 }
+
 .text-primary {
     color: #FD6E0A;
 }
+
+.section-title {
+    color: #181818;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
+}
+
 .btn-primary {
     border-radius: 5px;
     background: #FD6E0A;
@@ -24,29 +41,66 @@ nav {
     font-weight: 700;
     padding: 15px 35px;
 }
-nav > ul {
+
+nav>ul {
     display: flex;
     align-items: center;
 }
+
 nav li {
     list-style: none;
     margin-right: 50px;
 
 }
+
 nav a {
     text-decoration: none;
     color: #474747;
 
 }
+
 .header {
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
+
 .banner {
-    padding: 30px 30px 30px 150px;
-    display: flex; 
-    align-items: center;  
+    padding: 30px 30px 0px 150px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
+
 .banner .profile-pic {
     width: 500px;
 
+}
+
+.banner-greeting {
+    font-size: 45px;
+    color: #474747;
+    margin-bottom: 0;
+}
+
+.bannr-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-content {
+    max-width: 500px;
+}
+
+/* main section styles */
+
+/* about section styles */
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px ;
 }
