--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,6 +2,10 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+main section {
+    margin-top: 130px;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -100,20 +104,47 @@ main {
     max-width: 1140px;
     margin: 0px auto;
 }
+
 /* about section styles */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px ;
+    margin: 130px;
 }
+
 .about-info-container {
     display: flex;
     justify-content: space-around;
 }
+
 .about-info {
     text-align: center;
 }
+
 #what-i-do-description {
     padding: 30px 150px;
+}
+
+/* skills related styles */
+.skills-container {
+    display: flex;
+    gap: 24px;
+}
+
+.skill {
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skill-description {
+    color: #757575;
+}
+
+.resume-column-title {
+    color:  #474747;
+    font-size: 30px;
+    font-weight: 700;
 }
