--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -144,32 +144,38 @@ main {
 }
 
 .resume-column-title {
-    color:  #474747;
+    color: #474747;
     font-size: 30px;
     font-weight: 700;
 }
+
 .resume-container {
     display: flex;
     gap: 50px;
 }
+
 .resume-item-title {
     color: #474747;
     font-size: 25px;
     font-weight: 700;
     margin-bottom: 10px;
 }
+
 .resume-item-institute {
     margin-bottom: 20px;
     margin-top: 0px;
 }
-.resume-item-institute , .resume-item-description {
+
+.resume-item-institute,
+.resume-item-description {
     color: #757575;
 }
 
 .resume-container hr {
     margin: 30px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
 }
@@ -177,7 +183,26 @@ main {
 /* footer styles  */
 footer {
     display: flex;
+    gap: 100px;
     background-color: #FFF8F3;
-    margin-top: 100px; 
+    margin-top: 100px;
     padding: 130px 230px;
+}
+
+.footer-column {
+    width: 50%;
+}
+.social-links a {
+    margin-right: 25px;
+}
+.contact input[type="text"], .contact input[type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    padding: 18px 36px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0px;
+    width: 100%;
 }
